# Anagrammi-Creator

./: CMakeLists.txt  binarySearchTree.h  functions.h  mainFile.cpp
